# RPGSaveEditor

./: .gitignore  CMakeLists.txt  README.md  app.rc  resources.qrc
.github/workflows/: build.yml
assets/: RPGSaveEditor.desktop  icon.icns
installer/config/: config-linux.xml  config-windows.xml
src/: fileops.cpp  helpers.cpp  helpers.h  json_model.cpp  json_model.h  loadsave.cpp  logger.h  lz_string.hpp  main.cpp  mainwindow.cpp  mainwindow.h  rpgsave.cpp  rpgsave.h  tabs.cpp  writesave.cpp
tests/: run_tests.sh  smoke_test.cpp  test_json_compat.cpp
